--- a/myJupyter.ipynb
+++ b/myJupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,11 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def base_workbook():\n",
+    "def base_workbook(case):\n",
     "    # Create a base workbook for testing\n",
     "    filename = r\"C:\\Users\\agmontesb\\Downloads\\excel_module_test.xlsx\"\n",
     "    wb = px.load_workbook(filename)\n",
@@ -51,13 +51,13 @@
     "    wsheet = excel_wb.create_worksheet(ws_name)\n",
     "\n",
     "    # Tabla 1\n",
-    "    ws_range = \"G4:I9\"\n",
+    "    ws_range = [\"G4:I9\", \"F3:I9\"][case]\n",
     "    fmls, values = data_in_range(ws, ws_range)\n",
     "    sh1_tbl1 = ExcelTable(wsheet, 'sh1_tbl1', ws_range, fmls, values, recalc=True)\n",
     "    # m_sh1_tbl1 = sh1_tbl1.minimun_table()\n",
     "\n",
     "    # Tabla 2\n",
-    "    ws_range = \"G13:H15\"\n",
+    "    ws_range = [\"G11:H15\", \"F12:H15\"][case]\n",
     "    fmls, values = data_in_range(ws, ws_range)\n",
     "    sh1_tbl2 = ExcelTable(wsheet, 'sh1_tbl2', ws_range, fmls, values, recalc=True)\n",
     "    m_sh1_tbl2 = sh1_tbl2.minimun_table()\n",
@@ -67,13 +67,13 @@
     "    wsheet = excel_wb.create_worksheet(ws_name)\n",
     "\n",
     "    # Tabla 1\n",
-    "    ws_range = \"F4:H9\"\n",
+    "    ws_range = [\"F4:H9\", \"E3:H9\"][case]\n",
     "    fmls, values = data_in_range(ws, ws_range)\n",
     "    sh2_tbl1 = ExcelTable(wsheet, 'sh2_tbl1', ws_range, fmls, values, recalc=True)\n",
     "    # m_sh2_tbl1 = sh2_tbl1.minimun_table()\n",
     "\n",
     "    # Tabla 2\n",
-    "    ws_range = \"F13:H17\"\n",
+    "    ws_range = [\"F13:H17\", \"E12:H17\"][case]\n",
     "    fmls, values = data_in_range(ws, ws_range)\n",
     "    sh2_tbl2 = ExcelTable(wsheet, 'sh2_tbl2', ws_range, fmls, values, recalc=True)\n",
     "    # m_sh2_tbl2 = sh2_tbl2.minimun_table()\n",
@@ -83,7 +83,7 @@
     "    wsheet = excel_wb.create_worksheet(ws_name)\n",
     "\n",
     "    # Tabla 1\n",
-    "    ws_range = \"F3:H8\"\n",
+    "    ws_range = [\"F3:H8\", \"E2:H8\"][case]\n",
     "    fmls, values = data_in_range(ws, ws_range)\n",
     "    sh3_tbl1 = ExcelTable(wsheet, 'sh3_tbl1', ws_range, fmls, values, recalc=True)\n",
     "    # m_sh3_tbl1 = sh3_tbl1.minimun_table()\n",
@@ -94,62 +94,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\agmontesb\\Documents\\GitHub\\excel\\excel_workbook.py:1278: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "c:\\Users\\agmontesb\\Documents\\GitHub\\excel\\excel_workbook.py:1384: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df = self[excel_slice].fillna(0)\n"
      ]
     }
    ],
    "source": [
-    "wb = base_workbook()"
+    "wb = base_workbook(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws = wb['Parameters and inner links']\n",
-    "tbl = ws['sh2_tbl1']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'ws' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mws\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mF\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\agmontesb\\Documents\\GitHub\\excel\\excel_workbook.py:450\u001b[0m, in \u001b[0;36mExcelWorksheet.delete\u001b[1;34m(self, cell_slice)\u001b[0m\n\u001b[0;32m    448\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39misin(cells)\u001b[38;5;241m.\u001b[39many(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mInsert: Not all cells has been displaced\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    449\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minsert(cell_slice, from_delete\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m--> 450\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpropagate_error\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXlErrors\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mREF_ERROR\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\agmontesb\\Documents\\GitHub\\excel\\excel_workbook.py:307\u001b[0m, in \u001b[0;36mExcelWorksheet.propagate_error\u001b[1;34m(self, xl_error, codes)\u001b[0m\n\u001b[0;32m    302\u001b[0m to_process \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m codes \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    304\u001b[0m     \u001b[38;5;66;03m# Se quiere registrar todos los códigos de las celdas que tienen un error\u001b[39;00m\n\u001b[0;32m    305\u001b[0m     \u001b[38;5;66;03m# por el momento esto se hace solo en REF_ERROR ya que los otros salen del cálculo\u001b[39;00m\n\u001b[0;32m    306\u001b[0m     \u001b[38;5;66;03m# de las celdas.\u001b[39;00m\n\u001b[1;32m--> 307\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tbl \u001b[38;5;129;01min\u001b[39;00m \u001b[43mws\u001b[49m\u001b[38;5;241m.\u001b[39mtables:\n\u001b[0;32m    308\u001b[0m         df \u001b[38;5;241m=\u001b[39m tbl\u001b[38;5;241m.\u001b[39mdata\n\u001b[0;32m    309\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'ws' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>col</th>\n",
+       "      <th>E</th>\n",
+       "      <th>F</th>\n",
+       "      <th>G</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>row</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tabla 1:</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>l1</td>\n",
+       "      <td>250</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>l2</td>\n",
+       "      <td>230</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>l3</td>\n",
+       "      <td>100</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>l4</td>\n",
+       "      <td>85</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>l5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td></td>\n",
+       "      <td>683</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>tabla2:</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>l1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>l2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>l3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>l4</td>\n",
+       "      <td>#REF!</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td></td>\n",
+       "      <td>#REF!</td>\n",
+       "      <td>#REF!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<excel_workbook.ExcelWorksheet at 0x1b0d56032b0>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "wb.sheets[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ws = wb.sheets[1]\n",
+    "tbl = ws.tables[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ws.delete('F')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ws"
+    "tbl['G7'] = 40\n",
+    "tbl.recalculate(recalc=True)"
    ]
   },
   {
@@ -157,9 +295,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ws"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
